--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -159,10 +159,11 @@ button{
     <div class="class">
     <nav class="navbar">
         <a href="/" class="logo">Logo</a>
-        <form class="search-bar">
-            <input type="text" placeholder="Search" />
+        <form class="search-bar"  method="GET" action="{% url 'home' %}">
+            <input type="text" name ="q" placeholder="Search" />
             <button type="submit">Search</button>
         </form>
+
         <ul class="nav-links">
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="#">Shop</a></li>
