--- a/Templates/PRODUCT-INFO.html
+++ b/Templates/PRODUCT-INFO.html
@@ -421,6 +421,7 @@ button:focus {
 <div class="review">
     <h1>Write a Review</h1>
     <form action="" method="post">
+        {%csrf_token%}
         <div class="form-group">
             <!-- <label for="name">Name:</label>
             <input type="text" id="name" name="name" required> -->
@@ -429,25 +430,9 @@ button:focus {
             <!-- <label for="rating">Rating:</label> -->
             <!-- <input type="text" id="rating" name="rating" min="1" max="5" step="0.1" required> -->
             <div class="rating-stars">
-                <input type="radio" id="star5" name="rating" value="5" />
-                <label for="star5" title="5 stars">&#9733;</label>
-                <input type="radio" id="star4.5" name="rating" value="4.5" />
-                <label for="star4.5" title="4.5 stars">&#9733;</label>
-                <input type="radio" id="star4" name="rating" value="4" />
-                <label for="star4" title="4 stars">&#9733;</label>
-                <input type="radio" id="star3.5" name="rating" value="3.5" />
-                <label for="star3.5" title="3.5 stars">&#9733;</label>
-                <input type="radio" id="star3" name="rating" value="3" />
-                <label for="star3" title="3 stars">&#9733;</label>
-                <input type="radio" id="star2.5" name="rating" value="2.5" />
-                <label for="star2.5" title="2.5 stars">&#9733;</label>
-                <input type="radio" id="star2" name="rating" value="2" />
-                <label for="star2" title="2 stars">&#9733;</label>
-                <input type="radio" id="star1.5" name="rating" value="1.5" />
-                <label for="star1.5" title="1.5 stars">&#9733;</label>
-                <input type="radio" id="star1" name="rating" value="1" />
-                <label for="star1" title="1 star">&#9733;</label>
-            </div>
+                <label for="star5">Rating</label>
+                <input type="text" id="star5" name="rating" />
+
         </div>
         <div class="form-group">
             <!-- <label for="review">Review:</label>
