--- a/Templates/buy_now.html
+++ b/Templates/buy_now.html
@@ -54,11 +54,20 @@
     <form class="buy-now-form" action="{% url 'buy_item' product.id %}" method="POST">
       {% csrf_token %}
       
-      <label for="quantity">Quantity:</label>
-      <input type="number" id="quantity" name="quantity" min="1" max="100" required>
+      <label for="quantity1">Quantity:</label>
+      <input type="number" id="quantity1" name="quantity" min="1" max="100" required>
       
-      <label for="address">Address:</label>
-      <textarea id="address" name="address" required></textarea> 
+      <label for="address1">Address:</label>
+
+      {% for i in name_  %}
+      <select name="address1" id="car" required>
+        <option value="{{i.name}}">{{i.name}}</option>
+        
+      </select>
+      {% endfor %}
+      <br>
+      <br>
+      <br>
       <button type="submit">Buy Now</button>
   </form>
 </body>
