--- a/Templates/register.html
+++ b/Templates/register.html
@@ -108,6 +108,11 @@
         <label for="confirm_password">Confirm Password</label>
         <input type="password" id="confirm_password" name="confirm_password" required>
 
+          <label for="Email">Email</label>
+        <input type="text" id="Email" name = "email" required>
+
+          <label for="address">Address</label>
+        <input type="text" id="address" name = "Address" required>
         <button type="submit">Register</button>
       </form>
       <p>Already have an account? <a href="{% url 'login-user' %}">Login here</a></p>
